# pytest-astropy-header

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml  publish.yml
pytest_astropy_header/: display.py
tests/: test_display.py
