[metadata]
name = pytest-astropy-header
version = attr:pytest_astropy_header.__version__
description = pytest plugin to add diagnostic information to the header of the test output
long_description = file:README.rst
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
url = http://astropy.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
install_requires =
    pytest>=2.8

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
    coverage
    numpy
    astropy

[options.entry_points]
pytest11 =
    pytest_astropy_header = pytest_astropy_header.display

[flake8]
max-line-length = 125
