[metadata]
name = pytest-astropy-header
description = pytest plugin to add diagnostic information to the header of the test output
long_description = file:README.rst
long_description_content_type = text/x-rst
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
url = https://github.com/astropy/pytest-astropy-header
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6

[options.extras_require]
test =
    numpy
    astropy>=4.0

[options.entry_points]
pytest11 =
    pytest_astropy_header = pytest_astropy_header.display

[flake8]
max-line-length = 125
